fixes bug 130079 "Importing IE favorites turns spaces into %20 (URL-encoded)" patch=andreas.otte@debitel.net r=ben sr=darin